--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,25 @@
+<div class="container">
+
+    <div class="columns is-mobile is-centered">
+
+        <div class="column is-narrow">
+            <a class="has-text-dark" href="/carl-george-resume.txt">
+                <span class="icon"><i class="fa fa-file-text fa-fw" aria-hidden="true"></i></span>
+                <span>Plain Text</span>
+            </a>
+        </div>
+
+        <div class="column is-narrow">
+            <a class="has-text-dark" href="/carl-george-resume.pdf">
+                <span class="icon"><i class="fa fa-file-pdf-o fa-fw" aria-hidden="true"></i></span>
+                <span>PDF</span>
+            </a>
+        </div>
+
+    </div> <!-- columns -->
+
+</div> <!-- container -->
+
 <link href="https://github.com/carlwgeorge" rel="me">
 <link href="https://twitter.com/carlwgeorge" rel="me">
 <link href="https://www.linkedin.com/in/carlwgeorge/" rel="me">
