Only right-align text on tablet or higher

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <div class="columns">
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <h1 class="title is-2">Carl George</h1>
         <h2 class="subtitle is-4">Linux Systems Engineer</h2>
     </div>
