--- a/_includes/history.html
+++ b/_includes/history.html
@@ -4,7 +4,7 @@
     <div class="column">
         <p class="subtitle">Linux Systems Engineer, Rackspace</p>
     </div>
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <p class="subtitle">2014-present, San Antonio, TX</p>
     </div>
 </div>
@@ -31,7 +31,7 @@
     <div class="column">
         <p class="subtitle">Linux Systems Administrator, Rackspace</p>
     </div>
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <p class="subtitle">2011-2014, San Antonio, TX</p>
     </div>
 </div>
@@ -53,7 +53,7 @@
     <div class="column">
         <p class="subtitle">Electronics Communication Systems Maintainer, U.S. Army</p>
     </div>
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <p class="subtitle">2007-2011, Fort Sam Houston, TX</p>
     </div>
 </div>
@@ -71,7 +71,7 @@
     <div class="column">
         <p class="subtitle">Unmanned Aerial Vehicle Technician, U.S. Army</p>
     </div>
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <p class="subtitle">2005-2007, Fort Hood, TX and Camp Taji, Iraq</p>
     </div>
 </div>
@@ -89,7 +89,7 @@
     <div class="column">
         <p class="subtitle">Intelligence Systems Maintainer, U.S. Army</p>
     </div>
-    <div class="column has-text-right">
+    <div class="column has-text-right-tablet">
         <p class="subtitle">2003-2004, Fort Huachuca, AZ</p>
     </div>
 </div>
