--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,6 +1,6 @@
 <h3 class="title is-4 has-text-centered">Primary Skills</h3>
 <div class="columns has-text-weight-semibold">
-    <div class="column is-4 is-offset-2">
+    <div class="column is-4-tablet is-offset-2-tablet">
         <ul>
             <li>RPM Packaging</li>
             <li>Yum repository curation</li>
@@ -9,7 +9,7 @@
             <li>Containers</li>
         <ul>
     </div>
-    <div class="column is-4 has-text-right">
+    <div class="column is-4-tablet has-text-right-tablet">
         <ul>
             <li>Python programming</li>
             <li>Bash scripting</li>
