--- a/_includes/history.html
+++ b/_includes/history.html
@@ -2,10 +2,25 @@
 
 <div class="columns">
     <div class="column">
+        <p class="subtitle">Principal Software Engineer, Red Hat</p>
+    </div>
+    <div class="column has-text-right-tablet">
+        <p class="subtitle">2019-present, San Antonio, TX</p>
+    </div>
+</div>
+
+<div class="content">
+    <ul>
+        <li>The next adventure...</li>
+    </ul>
+</div>
+
+<div class="columns">
+    <div class="column">
         <p class="subtitle">Linux Systems Engineer, Rackspace</p>
     </div>
     <div class="column has-text-right-tablet">
-        <p class="subtitle">2014-present, San Antonio, TX</p>
+        <p class="subtitle">2014-2019, San Antonio, TX</p>
     </div>
 </div>
 
