--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,15 +1,7 @@
 <div class="columns">
-    <div class="column has-text-right-tablet">
+    <div class="column has-text-centered">
         <h1 class="title is-2">Carl George</h1>
-        <h2 class="subtitle is-4">Linux Systems Engineer</h2>
-    </div>
-    <div class="is-divider-vertical"></div>
-    <div class="column has-text-left">
-        <p class="subtitle is-6">
-            8918 Natalie Point<br>
-            San Antonio, Texas 78254<br>
-            210-999-0350<br>
-            <a href="mailto:carl@george.computer" rel="me">carl@george.computer</a>
-        </p>
+        <h2 class="subtitle is-4">Software Engineer</h2>
+        <p><a href="mailto:carl@george.computer" rel="me">carl@george.computer</a></p>
     </div>
 </div>
