--- a/_includes/history.html
+++ b/_includes/history.html
@@ -11,7 +11,21 @@
 
 <div class="content">
     <ul>
-        <li>The next adventure...</li>
+        <li>Built packages and modules for CentOS 8 and CentOS Stream 8.</li>
+        <li>Created new CentOS release and repository packages to complete split of the distributions.</li>
+        <li>Developed robust upgrade process for converting from CentOS 8 to CentOS Stream 8.</li>
+        <li>Engaged with partners and community members to drive contributions to CentOS Stream 8.</li>
+        <li>Collaborated with RHEL maintainers to merge CentOS modifications into RHEL packages to reduce non-value add work.</li>
+        <li>Lead development of EPEL Next to solve EPEL package installation problems on CentOS Stream.</li>
+        <li>Lead effort to deliver CentOS Stream 9 via MirrorManager.</li>
+        <li>Modified CentOS delivery pipeline to enable downgrading packages via dnf.</li>
+        <li>Created various scripts to streamline routine tasks related to package and module building.</li>
+        <li>Maintained koji tag structure and build targets.</li>
+        <li>Expanded team and public documentation.</li>
+        <li>Created and maintained RPM packages in Fedora and EPEL.</li>
+        <li>Fedora package reviews for partners and community members.</li>
+        <li>Collaborated with upstream projects to report and resolve bugs in packaged software.</li>
+        <li>Continuous engagement with CentOS, EPEL, RHEL, and Fedora communities.</li>
     </ul>
 </div>
 
