--- a/_includes/skills.html
+++ b/_includes/skills.html
@@ -1,21 +1,23 @@
-<h3 class="title is-4 has-text-centered">Primary Skills</h3>
-<div class="columns has-text-weight-semibold">
-    <div class="column is-4-tablet is-offset-2-tablet">
+<div class="columns is-vcentered has-text-weight-semibold">
+    <div class="column is-offset-1 is-4">
+        <h3 class="title is-4">Primary Skills</h3>
+    </div>
+    <div class="column is-4">
         <ul>
             <li>RPM Packaging</li>
             <li>Yum repository curation</li>
+            <li>Ansible automation</li>
             <li>Webserver configuration</li>
             <li>Database management</li>
-            <li>Containers</li>
         <ul>
     </div>
-    <div class="column is-4-tablet has-text-right-tablet">
+    <div class="column">
         <ul>
+            <li>Containers</li>
             <li>Python programming</li>
             <li>Bash scripting</li>
+            <li>Systemd management</li>
             <li>Disk partitioning</li>
-            <li>Systemd unit files</li>
-            <li>Ansible automation</li>
         </ul>
     </div>
 </div>
