--- a/_includes/header.html
+++ b/_includes/header.html
@@ -4,4 +4,15 @@
         <h2 class="subtitle is-4">Software Engineer</h2>
         <p><a href="mailto:carl@george.computer" rel="me">carl@george.computer</a></p>
     </div>
+    <div class="is-divider-vertical"></div>
+    <div class="column">
+        <p>
+            I am a Linux geek who was lucky enough to turn my hobby into my job.  A strong
+            foundation of troubleshooting skills enables me to quickly adapt to new
+            technologies.  I am passionate about sharing knowledge through documentation,
+            training, and mentorship.  The Open Source ideals of collaboration and shared
+            success drive me to improve myself, the communities I participate in, and the
+            systems I maintain.
+        </p>
+    </div>
 </div>
