--- a/_includes/history.html
+++ b/_includes/history.html
@@ -2,10 +2,34 @@
 
 <div class="columns">
     <div class="column">
+        <p class="subtitle">Principal Software Engineer and Team Lead, Red Hat</p>
+    </div>
+    <div class="column has-text-right-tablet">
+        <p class="subtitle">2021-present, San Antonio, TX</p>
+    </div>
+</div>
+
+<div class="content">
+    <ul>
+        <li>Planned, coordinated, and implemented the launch of EPEL 9, which for the first time ever was completed months <em>before</em> the corresponding RHEL release.</li>
+        <li>Engaged with peers, partners, and community members to curate a broad selection of packages in EPEL.</li>
+        <li>Implemented and maintained policies and procedures as a member of the EPEL Steering Committee and the Fedora Packaging Committee.</li>
+        <li>Sponsored new packagers into the Fedora project, providing ongoing mentorship on packaging standards.</li>
+        <li>Resolved Fedora build failures related to major changes such as Python 3.11, Pytest 7, and OpenSSL 3.</li>
+        <li>Refreshed Fedora Python spec files to the latest build macro standards.</li>
+        <li>Created and maintained RPM packages in Fedora and EPEL.</li>
+        <li>Fedora package reviews for partners and community members.</li>
+        <li>Collaborated with upstream projects to report and resolve bugs in packaged software.</li>
+        <li>Continuous engagement with CentOS, EPEL, RHEL, and Fedora communities.</li>
+    </ul>
+</div>
+
+<div class="columns">
+    <div class="column">
         <p class="subtitle">Principal Software Engineer, Red Hat</p>
     </div>
     <div class="column has-text-right-tablet">
-        <p class="subtitle">2019-present, San Antonio, TX</p>
+        <p class="subtitle">2019-2021, San Antonio, TX</p>
     </div>
 </div>
 
@@ -16,7 +40,7 @@
         <li>Developed robust upgrade process for converting from CentOS 8 to CentOS Stream 8.</li>
         <li>Engaged with partners and community members to drive contributions to CentOS Stream 8.</li>
         <li>Collaborated with RHEL maintainers to merge CentOS modifications into RHEL packages to reduce non-value add work.</li>
-        <li>Lead development of EPEL Next to solve EPEL package installation problems on CentOS Stream.</li>
+        <li>Designed and created EPEL Next to solve EPEL package installation problems on CentOS Stream.</li>
         <li>Lead effort to deliver CentOS Stream 9 via MirrorManager.</li>
         <li>Modified CentOS delivery pipeline to enable downgrading packages via dnf.</li>
         <li>Created various scripts to streamline routine tasks related to package and module building.</li>
@@ -40,7 +64,7 @@
 
 <div class="content">
     <ul>
-        <li>Created and maintained RPM packages for IUS, EPEL, and Fedora.</li>
+        <li>Created and maintained RPM packages for <a href="https://ius.io">IUS</a>, EPEL, and Fedora.</li>
         <li>Maintained build and repository infrastructure for the IUS project.</li>
         <li>Added new packages to IUS and EPEL based on customer and coworker request.</li>
         <li>Enabled better customer outcomes by having necessary software packaged and available.</li>
@@ -90,7 +114,7 @@
     <ul>
         <li>Lead projects to install ethernet and fiber optic networks.</li>
         <li>Coordinated with contractors to provide network, domain, and account administration.</li>
-        <li>Established standard operating procedure for unit’s wireless communication equipment, providing guidelines for configuration and issue of satellite phones, radios, and cellular phones.</li>
+        <li>Established standard operating procedure for unit's wireless communication equipment, providing guidelines for configuration and issue of satellite phones, radios, and cellular phones.</li>
         <li>Participated in search and rescue operation for a missing heat stroke victim during training operations.</li>
         <li>Assisted in mobilization effort for the 2010 Haiti earthquake relief effort.</li>
     </ul>
@@ -110,7 +134,7 @@
         <li>Performed troubleshooting and routine maintenance of the Ground Control Station, including hardware maintenance, software patching, and network troubleshooting between Solaris and Windows.</li>
         <li>Selected as a Quality Control Manager over more experienced peers due to high level of proficiency.</li>
         <li>Trained multiple Technical Inspectors to assist with enforcing standard operating procedures.</li>
-        <li>Optimized unit’s electronic maintenance system for technical accuracy and efficiency.  Changes were later adopted by entire U.S. Army.</li>
+        <li>Optimized unit's electronic maintenance system for technical accuracy and efficiency.  Changes were later adopted by all U.S. Army Shadow UAV units.</li>
     </ul>
 </div>
 
